Alignment issue in footer fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -898,7 +898,7 @@ footer {
 .center .content .text {
   font-size: 1.0625rem;
   font-weight: 500;
-  padding-left: 10px;
+  
   color: #f3f3f3;
 }
 .center .content .phone {
